# SwiftIPTV

./: .gitignore  CHANGELOG.md  README.md  documento.txt
.github/workflows/: build.yml
app/: CMakeLists.txt  README_APP.md  app.manifest  install.bat  installer.nsi  run_smoke_test.bat  smoke_test.m3u
app/qml/: AppButton.qml  CategorySidebar.qml  DiagnosticView.qml  DnsSetup.qml  HomeScreen.qml  LiveTV.qml  LoginScreen.qml  Logo.qml  Main.qml  MainPlayer.qml  MoviesScreen.qml  PinDialog.qml  PlayerOverlay.qml  SeriesScreen.qml  SettingsScreen.qml  Theme.qml  TopBar.qml  TopNav.qml  VodBrowser.qml  VodPlayerColumn.qml
app/src/: main.cpp
app/src/core/: AuthManager.cpp  AuthManager.h  ChannelManager.cpp  ChannelManager.h  DiagnosticEngine.cpp  DiagnosticEngine.h  DnsChanger.cpp  DnsChanger.h  EPGManager.cpp  EPGManager.h  M3UParser.cpp  M3UParser.h  NetworkThread.cpp  NetworkThread.h  PrefetchEngine.cpp  PrefetchEngine.h  Settings.cpp  Settings.h  StreamPlayer.cpp  StreamPlayer.h
app/src/ui/: ChannelList.cpp  ChannelList.h  DiagnosticPanel.cpp  DiagnosticPanel.h  DnsSetupWindow.cpp  DnsSetupWindow.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  PlayerWidget.cpp  PlayerWidget.h
docs/superpowers/plans/: 2026-05-28-tv-ao-vivo-3-colunas.md
docs/superpowers/specs/: 2026-05-28-tv-ao-vivo-3-colunas-design.md
painel/: README_PAINEL.md  config.php  index.php  login.php  logout.php
painel/api/: auth.php
painel/assets/: app.js  style.css
painel/clientes/: add.php  edit.php  index.php
painel/dns/: add.php  edit.php  index.php  ping_test.php
painel/includes/: auth.php  db.php  functions.php
painel/install/: install.php  schema.sql  schema_hostinger.sql
painel/logs/: index.php
